--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.3",
     "framer-motion": "^10.11.2",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-plx": "^2.1.2",
     "react-router-dom": "^6.10.0",
