--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
+    "ethers": "^5.7.2",
     "framer-motion": "^10.12.12",
     "react": "^18.2.0",
     "react-confetti-explosion": "^2.1.2",
