--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "framer-motion": "^10.12.12",
+    "peerpaysdk": "file:../../PeerPay-Sdk",
     "react": "^18.2.0",
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.2.0",
@@ -22,6 +23,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "sass": "^1.61.0",
+    "trychecker": "file:../../npm-package-tutorial",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
