--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "framer-motion": "^10.12.12",
-    "peerpaysdk": "file:../../PeerPay-Sdk",
+    "peerpaysdk": "^1.0.4",
     "react": "^18.2.0",
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.2.0",
