--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,11 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@splinetool/react-spline": "^2.2.6",
+    "@superfluid-finance/sdk-core": "^0.6.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
-    "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "framer-motion": "^10.12.12",
     "peerpaysdk": "^1.0.4",
